# luminescent-cluster

./: .dockerignore  .env.example  .gitignore  .mcp.json  .spec-baseline.json  ANTIGRAVITY_SETUP.md  CHANGELOG.md  CLAUDE.md  CONTAINERIZATION.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.pixeltable  Dockerfile.session-memory  IMPLEMENTATION_REVIEW.md  LICENSE  LOCAL_SETUP.md  Makefile  README.md  SETUP_COMPLETE.md  agent_tools.py  claude_config.json.old  context-aware-ai-system.md  docker-compose.yml  install.sh  luminescent-cluster.md  mkdocs.yml  pixeltable-overview.md  pixeltable_mcp_server.py  pixeltable_setup.py  pyproject.toml  quickstart.sh  requirements-pixeltable.txt  requirements-session.txt  requirements.txt  session_memory_server.py  test_setup.py  test_upsert.py  uninstall.sh
.agent/: config.yaml
.agent/hooks/: post-commit  post-merge  post-rewrite
.claude/skills/session-init/: SKILL.md
.claude/skills/session-save/: SKILL.md
.council/logs/2026-01-07T21-25-55-87316c79/: request.json  result.json  stage1.json  stage2.json  stage3.json
.council/logs/2026-01-07T21-41-43-284ed67c/: request.json  result.json  stage1.json  stage2.json  stage3.json
.council/logs/2026-01-07T21-49-29-4db02c46/: request.json  result.json  stage1.json  stage2.json  stage3.json
.council/logs/2026-01-07T22-28-03-68ee9bc6/: request.json  result.json  stage1.json  stage2.json  stage3.json
.council/logs/2026-01-07T22-37-30-fa7de5f2/: request.json  result.json  stage1.json  stage2.json  stage3.json
.council/logs/2026-01-07T22-43-42-b3f93afd/: request.json  result.json  stage1.json  stage2.json  stage3.json
.council/logs/2026-01-08T08-50-47-8e952287/: request.json  result.json  stage1.json  stage2.json  stage3.json
.council/logs/2026-01-08T08-58-44-1f231065/: request.json  result.json  stage1.json  stage2.json  stage3.json
.council/logs/2026-01-08T09-07-42-65b786d1/: request.json  result.json  stage1.json  stage2.json  stage3.json
.council/logs/2026-01-08T09-17-15-5d64447c/: request.json  result.json  stage1.json  stage2.json  stage3.json
.council/logs/2026-01-08T09-26-09-fb616185/: request.json  result.json  stage1.json  stage2.json  stage3.json
.council/logs/2026-01-08T09-35-09-eac9aedd/: request.json  result.json  stage1.json  stage2.json  stage3.json
.council/logs/2026-01-08T09-48-38-164e1ddf/: request.json  result.json  stage1.json  stage2.json  stage3.json
.council/logs/2026-01-08T09-52-14-9a7de332/: request.json  result.json  stage1.json  stage2.json  stage3.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  test_gap.md
.github/workflows/: ci.yml  docs.yml  memory-evaluation.yml  publish.yml  reconcile.yml
docs/: DEBUG_LOGGING.md  EXTENSIONS.md  KNOWN_ISSUES.md  index.md
docs/adrs/: ADR-001-python-version-requirement-for-mcp-servers.md  ADR-002-workflow-integration.md  ADR-003-project-intent-persistent-context.md  ADR-004-monetization-strategy.md  ADR-005-repository-organization-strategy.md  ADR-006-chatbot-platform-integrations.md  ADR-007-cross-adr-integration-guide.md  ADR-008-docs-ledger-reconciliation.md  ADR-009-spec-ledger-reconciliation.md  ADR-010-ledger-documentation-freshness-validation.md  index.md
docs/architecture/: index.md  memory-tiers.md  overview.md
docs/blog/: 01-memory-as-a-service.md  02-automated-context-loading.md  03-hybridrag-two-stage-retrieval.md  04-grounded-ingestion.md  05-multi-platform-chatbots.md  06-memory-blocks-structuring-context.md  07-open-source-strategy.md  08-security-deep-dive.md  index.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/mcp/: index.md  pixeltable-memory.md  session-memory.md
docs/memory/: README.md  index.md  maas.md  overview.md  providers.md
docs/operations/: index.md  memory-runbook.md
examples/: example_usage.py  sample_adr.md  verify_fix.py
integrations/: __init__.py  github_pat.py
k8s/: configmaps.yaml  deploy.sh  deployment-pixeltable.yaml  deployment-session-memory.yaml  namespace.yaml  persistent-volumes.yaml  secrets.yaml  services.yaml
scripts/: __init__.py  backup_restore.py  check-status.sh  db_repair.py  ingest-all-projects.sh  ingest.sh  init_memory.py  install_hooks.sh
spec/: ledger.yml
spec/requirements/: chatbot.md  extensions.md  integration.md  mcp.md  memory.md  security.md  workflow.md
spec/validation/: doc_freshness.py  reconcile.py
src/: __init__.py  version_guard.py
src/chatbot/: __init__.py  access_control.py  context.py  gateway.py  llm_provider.py  metrics.py  rate_limiter.py
src/chatbot/adapters/: base.py  (+5 more)
src/extensions/: __init__.py  protocols.py  registry.py
src/luminescent_cluster/: __init__.py  cli.py  version_guard.py
src/memory/: __init__.py  protocols.py
src/workflows/: __init__.py  config.py  ingestion.py
tests/: conftest.py  test_backup_restore.py  test_db_repair.py  test_extensions.py  test_github_pat.py  test_gitlab_pat.py  test_integration.py  test_mcp_extension_integration.py  test_skills.py  test_version_guard.py  test_workflow.py
tests/chatbot/: __init__.py  test_access_control.py  test_context.py  test_context_persistence.py  test_gateway.py  test_gateway_access_control.py  test_gateway_response_filtering.py  test_gateway_security.py  test_gateway_usage_tracking.py  test_llm_provider.py  test_metrics.py  test_protocols.py  test_rate_limiter.py
tests/extensions/: __init__.py  test_context_store.py  test_gdpr_audit.py  test_memory_protocol.py  test_protocol_versions.py
tests/memory/: __init__.py  golden_dataset.json  test_evaluation_harness.py  test_extraction.py  test_extraction_precision.py  test_golden_dataset.py  test_janitor.py  test_lifecycle_policies.py  test_local_memory_provider.py  test_mcp_tools.py  test_memory_schemas.py  test_observability.py  test_provider_compliance.py  test_retrieval.py  test_user_memory_table.py
tests/spec/: test_adr010_validation.py  test_reconcile.py
tests/workflows/: __init__.py  conftest.py  test_config_parser.py  test_hooks.py  test_ingest_file.py  test_scripts.py  test_skills.py
(+270 files in other folders)
