[project]
name = "luminescent-cluster"
version = "0.2.0"
description = "Context-aware AI development system with session memory and long-term knowledge"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Amiable Development", email = "dev@amiable.dev"}
]
keywords = ["ai", "memory", "context", "mcp", "claude", "pixeltable", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# CAUTION: See ADR-001 - databases are locked to their creation Python version!
# This range is for NEW installations only. Existing databases WILL segfault
# if accessed from a different Python minor version than they were created with.
#
# Why intentionally loose?
# 1. New installations: Users starting fresh can use any supported version
# 2. Migration support: Users migrating need to install on the new Python version first
# 3. Layer 3 enforcement: The runtime guard catches mismatches before segfault
requires-python = ">=3.10,<3.14"

dependencies = [
    "pixeltable>=0.1.0",
    "gitpython>=3.1.0",
    "mcp>=0.1.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
summarization = [
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "integrations"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
