[project]
name = "luminescent-cluster"
dynamic = ["version"]
description = "Context-aware AI development system with session memory and long-term knowledge"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Amiable Development", email = "dev@amiable.dev"}
]
keywords = ["ai", "memory", "context", "mcp", "claude", "pixeltable", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# CAUTION: See ADR-001 - databases are locked to their creation Python version!
# This range is for NEW installations only. Existing databases WILL segfault
# if accessed from a different Python minor version than they were created with.
#
# Why intentionally loose?
# 1. New installations: Users starting fresh can use any supported version
# 2. Migration support: Users migrating need to install on the new Python version first
# 3. Layer 3 enforcement: The runtime guard catches mismatches before segfault
requires-python = ">=3.10,<3.14"

# Core dependencies - lightweight, no heavy ML libs
dependencies = [
    "gitpython>=3.1.0",
    "mcp>=0.1.0",
    "networkx>=3.0",
    "pathspec>=0.11.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Pixeltable long-term memory - install with: pip install "luminescent-cluster[pixeltable]"
pixeltable = [
    "pixeltable>=0.1.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
# Summarization support
summarization = [
    "openai>=1.0.0",
]
# All optional dependencies
all = [
    "luminescent-cluster[pixeltable,summarization]",
]
# Development dependencies
dev = [
    "numpy>=1.24.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.0.0",
]
# Documentation dependencies
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/amiable-dev/luminescent-cluster"
Repository = "https://github.com/amiable-dev/luminescent-cluster"
Issues = "https://github.com/amiable-dev/luminescent-cluster/issues"

[project.scripts]
luminescent-cluster = "luminescent_cluster.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/luminescent_cluster/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/luminescent_cluster"]
artifacts = ["src/luminescent_cluster/skills/bundled/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "requirement(req_id): Link test to a requirement ID (e.g., REQ-MCP-001)",
    "critical: Mark test as critical priority (100% coverage required)",
    "high: Mark test as high priority (95% coverage required)",
    "medium: Mark test as medium priority (85% coverage required)",
    "low: Mark test as low priority (75% coverage required)",
    "integration: Mark test as integration test (cross-system)",
    "security: Mark test as security-related",
    "performance: Mark test as performance benchmark",
    "slow: Mark test as slow-running (may be skipped in quick runs)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top (intentional for config-before-import pattern)
    "E741",   # Ambiguous variable name - false positives on loop vars
    "F401",   # Unused imports - common in __init__.py re-exports and tests
    "F541",   # f-string without placeholders - harmless
    "F811",   # Redefinition - common in tests and intentional re-imports
    "F821",   # Undefined name - false positives on forward references
    "F841",   # Local variable assigned but never used (common in tests for setup)
    "I001",   # Import sorting - auto-fix causes circular imports, so ignore
    "N806",   # Variable in function should be lowercase
    "N818",   # Exception name should end with Error
    "W291",   # Trailing whitespace - cosmetic
    "W293",   # Blank line contains whitespace - cosmetic
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]
